--- a/add-style.css
+++ b/add-style.css
@@ -70,12 +70,13 @@ button:focus {
 }
 
 .checkboxes {
-  margin-top: 8px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-label {
-  display: block;
-  margin-bottom: 5px;
+.checkboxes label {
+  flex: 1 1 calc(50% - 10px); /* Adjust width as needed */
+  margin: 5px;
 }
 
 input[type="checkbox"] {
