--- a/index-style.css
+++ b/index-style.css
@@ -10,9 +10,8 @@
 
 body {
   font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+  background-color: #e3dac6;
 }
-
 /* ... (your existing styles) */
 
 /* Message Container */
@@ -98,8 +97,8 @@ body {
 .ticker-content {
   display: inline-block;
   white-space: nowrap;
-  animation: ticker-animation 20s linear infinite;
-  padding-left: 25%; /* Add initial padding for smooth entry */
+  animation: ticker-animation 45s linear infinite;
+  padding-left: 0 px; /* Add initial padding for smooth entry */
 }
 
 .ticker-text {
@@ -109,7 +108,7 @@ body {
   color: #333;
   background-color: #f7f7f7; /* Match background with the ticker container */
   border-radius: 20px; /* Add border radius for a rounded look */
-  margin: 0 5px; /* Add some horizontal spacing */
+  margin: 0 3px; /* Add some horizontal spacing */
 }
 
 @keyframes ticker-animation {
@@ -226,6 +225,33 @@ body {
   background-color: rgba(255, 255, 255, 0.95);
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
+}
+
+/* Loader */
+
+.loading {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 300px; /* Adjust as needed */
+}
+
+.loader {
+  border: 6px solid #f3f3f3;
+  border-top: 6px solid #3498db;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 /* Contribution Graph */
